--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
-    "@nextui-org/react": "^2.2.9",
+    "@nextui-org/react": "^2.4.8",
     "@reduxjs/toolkit": "^2.0.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tremor/react": "^3.12.1",
@@ -19,9 +19,10 @@
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.0.1",
     "clsx": "^2.0.0",
     "crypto-js": "^4.2.0",
-    "framer-motion": "^10.16.16",
+    "framer-motion": "^11.11.9",
     "fs": "^0.0.1-security",
     "next": "^14.0.2",
     "postcss": "8.4.31",
